// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhanceAppFiles() array value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"numbers\\": [
    1,
    2,
    3
  ]
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() async function value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 30
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() boolean value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"good\\": true
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() function that returns resolved promise value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 99
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() function value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 100
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() many values 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 20,
  \\"name\\": \\"foo\\",
  \\"last\\": \\"2020-04-26\\",
  \\"badges\\": [
    {
      \\"name\\": \\"Gold\\"
    },
    {
      \\"name\\": \\"Silver\\"
    }
  ]
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() number value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 50
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() object value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"order\\": {
    \\"size\\": \\"M\\",
    \\"color\\": \\"red\\"
  }
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() resolved promise value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"age\\": 40
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;

exports[`enhanceAppFiles() string value 1`] = `
Object {
  "content": "// Generated by vuepress-plugin-data
export default ({ Vue }) => {
  Vue.mixin({
    data() {
      return {
        vppData: {
  \\"name\\": \\"blah\\"
}
      };
    }
  });
}
",
  "name": "vuepress-plugin-data_mixin",
}
`;
